# jurisprudence

./: .env  .gitignore  LICENSE  Makefile  README.md  jurisprudence.py  metadata.md  metadata.yaml  pyproject.toml  requirements-cli.txt  requirements.txt
.github/workflows/: export.yml
jurisprudence/: cli.py  schema.py  settings.py  utils.py
jurisprudence/templates/: release_note.jinja2
release_notes/: template.jinja2  v2024.09.06.md  v2024.09.07.md  v2024.09.10.md  v2024.09.12.md  v2024.09.13.md  v2024.09.16.md  v2024.09.19.md  v2024.09.22.md  v2024.09.25.md  v2024.09.28.md  v2024.10.01.md  v2024.10.04.md  v2024.10.07.md  v2024.10.10.md  v2024.10.13.md  v2024.10.16.md  v2024.10.20.md  v2024.10.22.md  v2024.10.25.md  v2024.10.28.md  v2024.10.31.md  v2024.11.01.md  v2024.11.04.md  v2025.01.03.md  v2025.03.20.md
