[project]
name = "jurisprudence"
version = "0.1.0"
description = "Retrieves French jurisprudences"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    "Antoine Jeannot <antoine.jeannot1002@gmail.com>"
]
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.2",
    "rich>=13.8.0",
    "tenacity>=9.0.0",
]
