[build-system]
requires = ["setuptools>=63", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jurisprudence"
version = "0.1.0"
description = "Retrieves French Jurisprudences"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "LO-2.0"}
authors = [
    {name = "Antoine Jeannot", email = "antoine.jeannot1002@gmail.com"},
]
dynamic = ["optional-dependencies"]
dependencies = [
    "click>=8.1.7",
    "datasets>=2.21.0",
    "duckdb>=1.1.0",
    "httpx>=0.27.2",
    "huggingface-hub>=0.24.6",
    "jinja2>=3.1.4",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.1",
    "rich>=13.8.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.7.0",
]
[tool.setuptools.dynamic]
optional-dependencies = {cli = { file = ["requirements-cli.txt"] }}

[project.scripts]
jurisprudence = "jurisprudence.cli:cli"

[tool.setuptools]
packages = ["jurisprudence"]

[tool.setuptools.package-data]
jurisprudence = [
    "templates/release_note.jinja2",
    "py.typed",
]
